--- a/market/templates/login.html
+++ b/market/templates/login.html
@@ -28,8 +28,8 @@
     {{form.username(class='form-control',placeholder='enter username')}}
 
 <br/>
-     {{form.password1.label()}}
-    {{form.password1()}}
+     {{form.password.label()}}
+    {{form.password()}}
 
 <br/>
 
