purchase and sell form

--- a/market/templates/market.html
+++ b/market/templates/market.html
@@ -17,7 +17,11 @@
 
 <ul>
     {% for item in items %}
-    <li>{{item.id}}| {{item.name}} | {{item.price}}</li>
+    <li>{{item.id}}| {{item.name}} | {{item.price}}
+        <form method="post">
+
+        </form>
+    </li>
     {% endfor %}
 </ul>
 
